[SUN-25] refactor: removing unused methods and reformatting the files
