# src/main/java/com/jovicsantos/suneverapi/api/dto/MeasurementDto.java
@@ -1,10 +1,7 @@
 package com.jovicsantos.suneverapi.api.dto;
 
+import jakarta.validation.constraints.NotBlank;
 import org.hibernate.validator.constraints.Length;
 
-import jakarta.validation.constraints.NotBlank;
-
-public record MeasurementDto(
-		@NotBlank String name,
-		@NotBlank @Length(max = 10) String abbreviation) {
+public record MeasurementDto(@NotBlank String name, @NotBlank @Length(max = 10) String abbreviation) {
 }
