# src/main/java/com/jovicsantos/suneverapi/api/dto/RecipeDto.java
@@ -1,7 +1,11 @@
 package com.jovicsantos.suneverapi.api.dto;
 
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+
 import java.util.List;
 
-public record RecipeDto(String name, String description, String imageLink, Integer portions,
-    List<RecipeIngredientsDto> ingredients) {
+public record RecipeDto(@NotBlank String name, @NotBlank String description, @NotBlank String imageLink,
+												@NotNull Integer portions,
+												@NotNull List<RecipeIngredientsDto> ingredients) {
 }
