# src/main/java/com/jovicsantos/suneverapi/domain/model/Measurement.java
@@ -1,11 +1,6 @@
 package com.jovicsantos.suneverapi.domain.model;
 
 import java.util.UUID;
-import lombok.Data;
 
-@Data
-public class Measurement {
-  private UUID id;
-  private String name;
-  private String abbreviation;
+public record Measurement(UUID id, String name, String abbreviation) {
 }
