# src/main/java/com/jovicsantos/suneverapi/domain/model/RecipeIngredient.java
@@ -2,12 +2,6 @@ package com.jovicsantos.suneverapi.domain.model;
 
 import java.math.BigDecimal;
 import java.util.UUID;
-import lombok.Data;
 
-@Data
-public class RecipeIngredient {
-  private UUID recipeIngredientId;
-  private Recipe recipe;
-  private UUID id;
-  private BigDecimal quantity;
+public record RecipeIngredient(UUID recipeIngredientId, Recipe recipe, UUID id, BigDecimal quantity) {
 }
