# src/main/java/com/jovicsantos/suneverapi/infrastructure/db/entity/MeasurementEntity.java
@@ -1,27 +1,26 @@
 package com.jovicsantos.suneverapi.infrastructure.db.entity;
 
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.UUID;
 
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
-import lombok.Data;
-
 @Entity
-@Data
+@Getter
+@Setter
 @Table(name = "measurement")
 public class MeasurementEntity implements Serializable {
-  private static final long serialVersionUID = 1L;
+	@Serial
+	private static final long serialVersionUID = 1L;
 
-  @Id
-  @GeneratedValue(strategy = GenerationType.AUTO)
-  private UUID id;
-  @Column(nullable = false)
-  private String name;
-  @Column(nullable = false, length = 10)
-  private String abbreviation;
+	@Id
+	@GeneratedValue(strategy = GenerationType.AUTO)
+	private UUID id;
+	@Column(nullable = false)
+	private String name;
+	@Column(nullable = false, length = 10)
+	private String abbreviation;
 }
